<resources>
    <string name="app_name">Geleceği Yazanlar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Açıldı.</string>
    <string name="drawer_close">Kapandı.</string>
    <string name="ne_ogrenebilirim">Ne öğrenebilirim?</string>
    <string name="android">Android Dünyası</string>
    <string name="ios">IOS Dünyası</string>
    <string name="windows">Windows Phone Dünyası</string>
    <string name="scratch">Scratch Dünyası</string>
    <string name="appinventor">App Inventor Dünyası</string>
    <string name="arduino">Arduino Dünyası</string>
    <string name="web">Web</string>
    <string name="oyun">Oyun</string>

    <string name="profilID">id</string>
    <string name="internet_baglantinizi_kontrol_edin">Lütfen Internet Bağlantınızı Kontrol Ediniz.</string>
    <string name="tamam">Tamam</string>


    <string name="ios101">81</string>
    <string name="ios102">30314</string>
    <string name="ios201">82</string>
    <string name="ios301">92</string>
    <string name="ios401">93</string>
    <string name="android101">94</string>
    <string name="android201">95</string>
    <string name="android301">96</string>
    <string name="android401">97</string>
    <string name="win101">98</string>
    <string name="win201">99</string>
    <string name="web101">21062</string>
    <string name="web201">21063</string>
    <string name="web301">23339</string>
    <string name="web401">28510</string>
    <string name="web402">30052</string>
    <string name="web302">23841</string>
    <string name="oyun101">12690</string>
    <string name="oyun201">12710</string>
    <string name="inventor101">23976</string>
    <string name="inventor201">24319</string>
    <string name="inventor301">24730</string>
    <string name="inventor401">27170</string>
    <string name="scratch101">24418</string>
    <string name="scratch201">24669</string>
    <string name="arduino101">24101</string>
    <string name="arduino201">25543</string>
    <string name="arduino301">25547</string>
    <string name="arduino401">25542</string>




    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_egitim_baslik">EgitimBaslikActivity</string>
    <string name="title_activity_egitim_icerik">EgitimIcerikActivity</string>
    <string name="title_activity_profil_acitivity">ProfilAcitivity</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="title_activity_arama">Arama Sayfası</string>
    <string name="title_activity_yorum">YorumActivity</string>
    <string name="title_activity_etkinlik_icerik">EtkinlikIcerikActivity</string>
    <string name="title_activity_blog_icerik_acitivity">BlogIcerikAcitivity</string>
    <string name="yorumlar">Yorumlar</string>
    <string name="yorum_yok_metni">Henüz Yorum Yapılmamış</string>
    <string name="isim">İsim:</string>
    <string name="kullanici_adi">Kullanıcı Adı:</string>
    <string name="tasarim">Tasarım</string>
    <string name="gun">gün</string>
    <string name="kaldi">kaldı</string>
    <string name="sonuc_bulunamadi">Eşleşen Sonuç Bulunamadı</string>

    <!-- Açıklama Metinleri -->
    <string name="android_101_aciklama">Başlangıç seviyesi derslerde Android uygulama geliştirme ortamını inceliyoruz.</string>
    <string name="android_201_aciklama">Bu bölümde basit projelerle Android uygulamaları geliştirmenin temellerini veriyoruz.</string>
    <string name="android_301_aciklama">Bu bölümden itibaren Android için mobil uygulama geliştirmenin ilk adımlarını atıyoruz.</string>
    <string name="android_401_aciklama">Artık ileri seviye Android geliştirme sürecine giriyor, uygulamalarımızı hayata geçiriyoruz.</string>
    <string name="ios_101_aciklama">Başlangıç seviyesi derslerde iOS uygulama geliştirme ortamını detaylı olarak inceliyoruz.</string>
    <string name="ios_102_aciklama">Başlangıç seviyesi derslerde iOS(Swift) uygulama geliştirme ortamını detaylı olarak inceliyoruz.</string>
    <string name="ios_201_aciklama">Bu bölümde basit projelerle iOS uygulamaları geliştirmenin temellerini veriyoruz.</string>
    <string name="ios_301_aciklama">Bu bölümden itibaren iOS geliştirme adımlarına giriş yapıyoruz.</string>
    <string name="ios_401_aciklama">Artık ileri seviye iOS geliştirme sürecine giriyor, uygulamalarımızı hayata geçiriyoruz.</string>
    <string name="wp_101_aciklama">Bu bölümde Windows Phone 8 için uygulama geliştirmeyi anlatacağız. İlk derslerde geliştirme ortamını detaylı olarak inceliyoruz.</string>
    <string name="wp_201_aciklama">Bu bölümde basit projelerle Windows Phone 8 uygulamaları geliştirmenin temellerini öğreniyor, ufak alıştırmalar yapıyoruz.</string>
    <string name="scratch_101_aciklama">Scratch\'e giriş yapacağız ve basit uygulamaların nasıl yapıldığını öğreneceğiz.</string>
    <string name="scratch_201_aciklama">Scratch öğrenmeye örnek projelerle devam edeceğiz.</string>
    <string name="appinventor_101_aciklama">App Inventor\'a giriş yapacağız ve basit uygulamaların nasıl yapıldığını öğreneceğiz.</string>
    <string name="appinventor_201_aciklama">App Inventor ile oyunlar yapmaya başlıyoruz.</string>
    <string name="appinventor_301_aciklama">App Inventor ile uygulama geliştirmeye başlıyoruz.</string>
    <string name="appinventor_401_aciklama">App Inventor ve Arduino ile uygulamalar geliştiriyoruz.</string>
    <string name="arduino_101_aciklama">Başlangıç seviyesi derslerde Arduino\'ya giriş yapıyoruz.</string>
    <string name="arduino_201_aciklama">Arduino ile yapabileceklerimizi öğreniyoruz.</string>
    <string name="arduino_301_aciklama">Arduino bilgimizi örnek uygulamalarla pekiştiriyoruz.</string>
    <string name="arduino_401_aciklama">Arduino bilgimizi örnek uygulamalarla pekiştiriyoruz.</string>
    <string name="oyun_101_aciklama">Bir ürün olarak oyunun hazırlık süreci, tasarım ve oyunda sanat konularını işleyeceğiz.</string>
    <string name="oyun_201_aciklama">Bu eğitimde oyun geliştirmedeki teknolojiye, gelir modeline ve medya ilişkilerine değineceğiz.</string>
    <string name="nodejs_401_aciklama">Web programlama eğitimimizin ileri seviyesinde, Node.js öğreniyoruz.</string>
    <string name="mongodb_402_aciklama">Web programlama eğitimimizin ileri seviyesinde,MongoDB öğreniyoruz.</string>
    <string name="jquery_302_aciklama">Web programlama eğitimimizin orta seviyesinde, JQuery öğreniyoruz.</string>
    <string name="javascript_301_aciklama">Web programlama eğitimimizin orta seviyesinde, JavaScript öğreniyoruz.</string>
    <string name="html_css_201_aciklama">Bu başlangıç seviyesi derslerimizde HTML5 ve CSS ile bilgimizi bir adım öteye taşıyoruz.</string>
    <string name="html_101_aciklama">Başlangıç seviyesi derslerde Web programlamanın temeli olan HTML\'i öğreniyoruz.</string>

    <!-- Başlık Metinleri -->
    <string name="android_101_baslik">101:Android\nSeviye:Başlangıç</string>
    <string name="android_201_baslik">201:Android\nSeviye:Başlangıç</string>
    <string name="android_301_baslik">301:Android\nSeviye:Orta</string>
    <string name="android_401_baslik">401:Android\nSeviye:İleri</string>
    <string name="ios_101_baslik">101:IOS\nSeviye:Başlangıç</string>
    <string name="ios_102_baslik">102:IOS\nSeviye:Başlangıç</string>
    <string name="ios_201_baslik">201:IOS\nSeviye:Başlangıç</string>
    <string name="ios_301_baslik">301:IOS\nSeviye:Orta</string>
    <string name="ios_401_baslik">401:IOS\nSeviye:İleri</string>
    <string name="wp_101_baslik">101:Windows Phone\nSeviye:Başlangıç</string>
    <string name="wp_201_baslik">201:Windows Phone\nSeviye:Orta</string>
    <string name="scratch_101_baslik">101:Scratch\nSeviye:Başlangıç</string>
    <string name="scratch_201_baslik">201:Scratch\nSeviye:Orta</string>
    <string name="appinventor_101_baslik">101:App Inventor\nSeviye:Başlangıç</string>
    <string name="appinventor_201_baslik">201:App Inventor\nSeviye:Orta</string>
    <string name="appinventor_301_baslik">301:App Invetor\nSeviye:İleri</string>
    <string name="appinventor_401_baslik">401:App Invetor\nSeviye:İleri</string>
    <string name="arduino_101_baslik">101:Arduino\nSeviye:Başlangıç</string>
    <string name="arduino_201_baslik">201:Arduino\nSeviye:Başlangıç</string>
    <string name="arduino_301_baslik">301:Arduino\nSeviye:Orta</string>
    <string name="arduino_401_baslik">401:Arduino\nSeviye:İleri</string>
    <string name="oyun_101_baslik">Oyun Geliştirme 101\nSeviye:Başlangıç</string>
    <string name="oyun_201_baslik">Oyun Geliştirme 201\nSeviye:Orta</string>
    <string name="html_101_baslik">101:HTML\nSeviye:Başlangıç</string>
    <string name="html_css_201_baslik">201:HTML5-CSS\nSeviye:Başlangıç</string>
    <string name="javascript_301_baslik">301:JavaScript\nSeviye:Orta</string>
    <string name="jquery_302_baslik">302:JQuery\nSeviye:Orta</string>
    <string name="nodejs_401_baslik">401:Node.js\nSeviye:İleri</string>
    <string name="mongodb_402_baslik">402:MongoDB\nSeviye:İleri</string>


    <!--  Profil Sertifika İsimleri  -->
    <string name="android_ismi">Android</string>
    <string name="ios_ismi">iOS</string>
    <string name="wp_ismi">Windows Phone</string>
    <string name="mobil_oyun_ismi">Mobil Oyun</string>
    <string name="web_programlama_ismi">Web Programlama</string>
    <string name="scratch_ismi">Scratch</string>
    <string name="app_inventor_ismi">App Inventor</string>
    <string name="arduino_ismi">Arduino</string>


    <string name="baslik">Başlık:</string>
    <string name="icerik">İçerik:</string>
    <string name="hata_olustu_mesaji">Bir Hata Oluştu</string>
    <string name="arama_sayfasi_icerikler_baslik">İÇERİKLER</string>
    <string name="arama_sayfasi_kullanicilar_baslik">KULLANICILAR</string>
    <string name="buton_tamam_metni">Tamam</string>
    <string name="yukleniyor">Yükleniyor…</string>
    <string name="sayfa_baslik_egitim">Eğitimler</string>
    <string name="sayfa_baslik_blog">Blog</string>
    <string name="sayfa_baslik_etkinlik">Etkinlik</string>
    <string name="sayfa_baslik_gelistirici">Geliştiriciler</string>
    <string name="sol_menu_egitim">Eğitim</string>
    <string name="sol_menu_blog">Blog</string>
    <string name="sol_menu_etkinlik">Etkinlik</string>
    <string name="sol_menu_gelistirici">Geliştiriciler</string>
    <string name="sayfa_baslik_gelecegi_yazanlar">Geleceği Yazanlar</string>
    <string name="profil_baslik_hakkinda">Hakkında</string>
    <string name="profil_baslik_basari_belgeleri">Başarı Belgeleri</string>
    <string name="blog_kategori_tumu">TÜMÜ</string>
    <string name="blog_kategori_gelecegi_yazanlar">GELECEĞİ YAZANLAR</string>
    <string name="blog_kategori_mobil">MOBİL</string>
    <string name="blog_kategori_android">ANDROID</string>
    <string name="blog_kategori_ios">IOS</string>
    <string name="blog_kategori_wp">WINDOWS PHONE</string>
    <string name="blog_kategori_oyun">OYUN</string>
    <string name="blog_kategori_tasarim">TASARIM</string>
    <string name="egitim_kategori_mobil">Mobil</string>
    <string name="egitim_kategori_web">Web</string>
    <string name="egitim_kategori_oyun">Oyun</string>
</resources>
