<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.turkcell.gelecegiyazanlar.Fragmentlar.OyunFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beyaz_renk"
    android:padding="@dimen/sol_margin_olcu_onbes"
    android:paddingBottom="0dp"
    tools:layout="@layout/fragment_web">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/mobilIcerikBaslik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_bes"
            android:text="@string/ne_ogrenebilirim" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!---OYUN -->

                <LinearLayout
                    android:id="@+id/oyun"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sol_margin_olcu_onbes"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/ellilikOlcu"
                        android:layout_height="@dimen/ellilikOlcu"
                        android:src="@drawable/oyungelistirmeikon" />

                    <TextView
                        style="@style/mobilIcerikBaslik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/margin_bes"
                        android:text="@string/oyun"
                        android:textColor="@color/oyun_renk" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/oyunsagok"
                            android:layout_width="@dimen/ellilikOlcu"
                            android:layout_height="@dimen/ellilikOlcu"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/sagok" />
                    </RelativeLayout>


                </LinearLayout>

                <!--Alt Icerik-->
                <LinearLayout
                    android:id="@+id/layout_oyun_icerik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <!---oyun 101-->
                    <LinearLayout
                        android:id="@+id/layout_oyun_101"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sol_margin_olcu_onbes"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/yesildaire" />

                        <TextView
                            style="@style/mobilIcerikBaslik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_bes"
                            android:text="@string/oyun_101_baslik"
                            android:textColor="@color/gri_siyah_renk"
                            android:textSize="@dimen/text_size_onyedi" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/asagi_image_101_oyun"
                                android:layout_width="@dimen/sol_margin_olcu_onbes"
                                android:layout_height="@dimen/sol_margin_olcu_onbes"
                                android:layout_centerVertical="true"
                                android:layout_toLeftOf="@+id/icon_kep_101_oyun"
                                android:src="@drawable/asagiikon" />

                            <ImageView
                                android:id="@+id/icon_kep_101_oyun"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/kepikon" />
                        </RelativeLayout>

                    </LinearLayout>

                    <!--oyun 101 alt basl˝k-->
                    <LinearLayout
                        android:id="@+id/egitimal_oyun_101"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/ellilikOlcu"
                        android:layout_marginTop="@dimen/margin_bes"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_bes"
                            android:text="@string/oyun_101_aciklama"
                            android:textColor="@color/gri_siyah_renk"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/egitimial_web_101_button"
                            android:layout_width="@dimen/yuzlukOlcu"
                            android:layout_height="@dimen/yuzlukOlcu"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="-15dp"
                            android:src="@drawable/egitimial" />
                    </LinearLayout>

                    <!---oyun 201-->
                    <LinearLayout
                        android:id="@+id/layout_oyun_201"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sol_margin_olcu_onbes"
                        android:orientation="horizontal"

                        >

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/saridaire" />

                        <TextView
                            style="@style/mobilIcerikBaslik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_bes"
                            android:text="@string/oyun_201_baslik"
                            android:textColor="@color/gri_siyah_renk"
                            android:textSize="@dimen/text_size_onyedi" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/asagi_image_201_oyun"
                                android:layout_width="@dimen/sol_margin_olcu_onbes"
                                android:layout_height="@dimen/sol_margin_olcu_onbes"
                                android:layout_centerVertical="true"
                                android:layout_toLeftOf="@+id/icon_kep_201_oyun"
                                android:src="@drawable/asagiikon" />

                            <ImageView
                                android:id="@+id/icon_kep_201_oyun"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/kepikon" />
                        </RelativeLayout>
                    </LinearLayout>

                    <!--oyun 201 alt basl˝k-->
                    <LinearLayout
                        android:id="@+id/egitimal_oyun_201"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/ellilikOlcu"
                        android:layout_marginTop="@dimen/margin_bes"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/margin_bes"
                            android:text="@string/oyun_201_aciklama"
                            android:textColor="@color/gri_siyah_renk"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/egitimial_oyun_201_button"
                            android:layout_width="@dimen/yuzlukOlcu"
                            android:layout_height="@dimen/yuzlukOlcu"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="-15dp"
                            android:src="@drawable/egitimial" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</FrameLayout>
